--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,13 +8,13 @@
 <div>
     <form action="/transliterator/changed" method="post">
         <label for="sourceText"/>
-        <textarea rows="7" id="sourceText" name="sourceText" th:text="${source}"></textarea>
+        <textarea rows="12" cols="60" id="sourceText" name="sourceText" th:text="${source}"></textarea>
         <button type="submit">Change</button>
     </form>
 </div>
 <br>
 <div>
-    <textarea rows="7" th:text="${converted}"></textarea>
+    <textarea rows="12" cols="60" th:text="${converted}"></textarea>
 </div>
 </body>
 </html>
