work with styles

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -12,3 +12,67 @@ body {
     font-size: 16px;
     text-rendering: optimizeLegibility;
 }
+
+#header-title {
+    padding-top: 1.6%;
+    margin-left: 1.6%;
+    letter-spacing: 0.11em;
+}
+
+.transliterator {
+    margin-left: 1.6%;
+    margin-right: 1.6%;
+}
+
+.transliterator button {
+    padding: 0.5%;
+    border-radius: 6px;
+    vertical-align: top;
+    margin-top: 4.5%;
+    background-color: #30b227;
+}
+
+textarea {
+    outline: none;
+    -moz-appearance: none;
+    resize: none;
+}
+
+[class*="col-"] {
+    float: left;
+    padding: 15px;
+}
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+.left-area {
+    float: left;
+    width: 40%;
+}
+
+.right-area {
+    float: left;
+    width: 40%;
+}
+
+.middle-area {
+    float: left;
+    width: 20%;
+}
+
+@media screen and (max-width: 800px) {
+    .left-area, .middle-area, .right-area {
+        width: 100%;
+    }
+}
