--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -19,7 +19,7 @@
     <form action="/transliterator/changed" method="post">
         <label for="sourceText"/>
         <textarea rows="16" cols="60" id="sourceText" name="sourceText" th:text="${source}" placeholder="Bu urında yazığız"></textarea>
-        <button type="submit">alıştırırğa</button>
+        <button type="submit">ALIŞ</button>
     </form>
 
     <textarea rows="16" cols="60" th:text="${converted}" readonly></textarea>
