--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -22,10 +22,16 @@
     <form action="/transliterator/changed" method="post">
         <label for="sourceText"/>
         <textarea class="col-4" rows="16" id="sourceText" name="sourceText" th:text="${source}" placeholder="Bu urında yazığız"></textarea>
+        <button id="reset" onclick="clearContents(sourceText)">x</button>
         <button class="col-1" type="submit">ALIŞ</button>
     </form>
 
-    <textarea class="col-4" rows="16" th:text="${converted}" readonly></textarea>
+    <textarea class="col-4" rows="16" th:text="${converted}" id="resultText" name="resultText" readonly onabort="clearIfSourceNull()"></textarea>
 </div>
 </body>
+<script>
+    function clearContents(element) {
+        element.value = '';
+    }
+</script>
 </html>
