--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -37,4 +37,5 @@
     }
 </script>
 <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+<script src="/js/script.js"/>
 </html>
